# railroad

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  README.old.md  conftest.py  environment_wrapper.py  hello.py  mrppddl.py  mrppddl_astar.py  mrppddl_debug.py  mrppddl_door_opening.py  mrppddl_helper.py  mrppddl_mcts.py  mrppddl_search.py  obf_door_example.py  pddl_experiment.py  pddl_rail.py  pyproject.toml  realworld.py  requirements.txt  test_graph.py  test_more_heuristic.py  test_mrppddl.py
.github/workflows/: uv-run-tests  uv-run-tests.yml
bench/: readme.md
bench/bench/: analysis.py  capture.py  dryrun.py  parallel.py  plan.py  progress.py  registry.py  runner.py  tracking.py
bench/bench/dashboard/: app.py  callbacks.py  data.py  figures.py  helpers.py  layouts.py  styles.py  sweeps.py
bench/benchmarks/: __init__.py  basic_planning.py  movie_night.py  multi_object_search.py  multi_robot.py
bench/scripts/: analyze_results.py  dashboard.py  run_benchmarks.py
bench/tests/: test_registry.py
docs/: frontier-hidden-objects-design.md  navigation-motion-sensing-refactor-plan.md
docs/plans/: 2026-02-02-interruptable-move-skill-design.md  2026-02-03-environment-merge-design.md  2026-02-03-environment-merge.md  2026-02-04-procthor-consolidation-design.md  2026-02-04-procthor-consolidation-impl.md
environment/: __init__.py  environment.py  simulator.py
environments/: environment_old.py  setup.py  simulator_old.py
environments/environments/: __init__.py  actions.py  core.py  environments.py  operators.py  plotting.py  procthor.py  simulator.py  utils.py
environments/environments/simulator/: __init__.py  actions.py  simulator.py
environments/tests/: test_actions_in_simulator.py  test_procthor_environment.py  test_procthor_operators.py  test_simulator_actions.py  test_simulator_advance_method.py  test_simulator_bugs.py  test_simulator_operators.py
gridmap/gridmap/: utils.py
mrppddl/: __init__.py  core.py  heuristic.py  setup.py  test_graph.py  test_mrppddl.py
mrppddl/include/mrppddl/: constants.hpp  core.hpp  ff_heuristic.hpp  goal.hpp  planner.hpp  state.hpp
mrppddl/src/mrppddl/: _bindings.cpp  core.py  dashboard.py  helper.py  heuristic.py  planner.py
mrppddl/tests/: test_complex_goal_heuristic.py  test_complex_goals.py  test_cpp.py  test_graph.py  test_mrppddl.py  test_mrppddl_goal_pickle.py  test_mrppddl_heuristic.py  test_mrppddl_wait.py  test_planner.py
mrppddl_env/: pyproject.toml
mrppddl_env/src/mrppddl_env/: __init__.py  core.py  environment.py
mrppddl_env/tests/: test_mrppddl_env.py
procthor/: Makefile.mk  setup.py
procthor/procthor/: __init__.py  plotting.py  procthor.py  procthor_new.py  resources.py  scenegraph.py  simulators.py  utils.py
procthor/procthor/scripts/: download_data.py  download_sbert.py  download_simulator.py
procthor/tests/: test_procthor_simulator.py
pyrobosim_worlds/: test_world.yaml
resources/pyrobosim_worlds/: test_world.yaml
scripts/: benchmark_or_vs_and_goals.py  clear_the_table.py  example1.py  example1_heuristic.py  find_and_move_couch.py  looping_search_and_place.py  looping_with_found_objects.py  mrppddl_search.py  multi_object_search_and_place.py  obf_door_example.py  procthor_planning.py  procthor_results.py  procthor_run.py  pyrobosim_demo.py  pyrobosim_planning_decoupled_demo.py  pyrobosim_planning_demo.py  pyrobosim_planning_revealed_demo.py  realworld.py  realworld_delivery.py  realworld_delivery_1v1d.py  realworld_delivery_2v1d.py  realworld_modern.py  sam-tmp.py  simple_example.py  simulation_delivery.py  test-standalone-install.sh
scripts/pyrobosim/: planning_demo.py  pyrobosim_demo.py
src/bench/: readme.md  setup.py
src/bench/bench/: analysis.py  cli.py  parallel.py  progress.py  registry.py  tracking.py
src/bench/benchmarks/: __init__.py  basic_planning.py  movie_night.py  multi_object_search.py  or_vs_and_goals.py
src/bench/scripts/: dashboard.py  run_benchmarks.py
src/environments/tests/: test_procthor_environment.py  test_simulator_actions.py
src/gridmap/: setup.py
src/mrppddl/: pyproject.toml  setup.py
src/mrppddl/src/mrppddl/: _bindings.cpp  core.py  dashboard.py  planner.py
src/mrppddl/tests/: test_complex_goal_heuristic.py  test_complex_goals.py  test_mrppddl_heuristic.py
src/procthor/tests/: test_procthor_simulator.py
(+6 files in other folders)
